refactor: 오타 등 자잘한 디테일 수정